<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RL2" 
    android:background="@drawable/login1">
    
    
    <LinearLayout 
        android:id="@+id/LL2"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        >
       
    <TextView 
        android:id="@+id/TV4"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:textSize="30dp"       
        android:background="#87cefa"
        android:textStyle="italic"
        android:text="@string/header"
        android:textColor="#536878"
         />
    </LinearLayout>

    
    <TextView 
        android:id="@+id/TV5"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/LL2"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:textSize="15dp"       
        android:textStyle="normal"
        android:text="@string/username"
        android:textColor="#536878"
         />
     
    <EditText
        android:id="@+id/ET3"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/ET6"
        android:layout_below="@+id/LL2"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/editbox_background"
        android:hint="@string/hint"
        android:singleLine="true"
        android:inputType="textEmailAddress"
         />
        
    <TextView 
        android:id="@+id/TV6"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/TV5"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:textSize="15dp"       
        android:textStyle="normal"
        android:text="@string/password"
        android:textColor="#536878"
         />
    <EditText 
         android:id="@+id/ET4"
         android:layout_width="130dp"
         android:layout_height="35dp"
         android:layout_below="@+id/ET3"
         android:layout_toRightOf="@+id/TV6"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="20dp"
         android:singleLine="true" 
         android:hint="@string/hint1"
         android:inputType="textPassword"
         android:background="@android:drawable/editbox_background"
         />
    
    <TextView 
        android:id="@+id/TV7"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/TV6"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:textSize="15dp"       
        android:textStyle="normal"
        android:text="@string/name"
        android:textColor="#536878"
        />
        
     <EditText
         android:id="@+id/ET5"
         android:layout_width="130dp"
         android:layout_height="35dp"
         android:layout_alignLeft="@+id/ET4"
         android:layout_below="@+id/ET4"
         android:layout_marginTop="15dp"
         android:background="@android:drawable/editbox_background"
         android:inputType="text"
         android:singleLine="true" />
  
     <TextView 
        android:id="@+id/TV8"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/TV7"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:textSize="15dp"       
        android:textStyle="normal"
        android:text="@string/address"
        android:textColor="#536878"
        />
     
     <EditText
         android:id="@+id/ET6"
         android:layout_width="130dp"
         android:layout_height="35dp"
         android:layout_alignLeft="@+id/ET5"
         android:layout_below="@+id/ET5"
         android:layout_marginTop="15dp"
         android:background="@android:drawable/editbox_background"
         android:inputType="text"
         android:maxLines="5"
         android:singleLine="true" />
      
     <TextView 
        android:id="@+id/TV9"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/TV8"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:textSize="15dp"       
        android:textStyle="normal"
        android:text="@string/mobile"
        android:textColor="#536878"
        />

     <EditText
         android:id="@+id/ET7"
         android:layout_width="130dp"
         android:layout_height="35dp"
         android:layout_alignLeft="@+id/ET6"
         android:layout_below="@+id/ET6"
         android:layout_marginTop="15dp"
         android:background="@android:drawable/editbox_background"
         android:inputType="phone"
         android:singleLine="true" />
     
      <Button 
          android:id="@+id/Btn3"
          android:layout_width="90dp"
          android:layout_height="35dp"
          android:layout_below="@+id/ET7"
          android:layout_marginTop="20dp"
          android:layout_centerInParent="true"
          android:layout_centerHorizontal="true"
          android:text="@string/button"
          />
      
     
     
</RelativeLayout>     