<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RL1" 
    android:background="@drawable/login1">
    
    
    <LinearLayout 
        android:id="@+id/LL1"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        >
       
    <TextView 
        android:id="@+id/TV1"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal"
        android:textSize="30dp"       
        android:background="#87cefa"
        android:textStyle="italic"
        android:text="@string/header"
        android:textColor="#536878"
         />
    </LinearLayout>

    
    <TextView 
        android:id="@+id/TV2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/LL1"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:textSize="15dp"       
        android:textStyle="normal"
        android:text="@string/username"
        android:textColor="#536878"
         />
     
    <EditText 
         android:id="@+id/ET1"
         android:layout_width="130dp"
         android:layout_height="35dp"
         android:layout_below="@+id/LL1"
         android:background="@android:drawable/editbox_background"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="18dp"
         android:singleLine="true" 
         android:hint="@string/hint"
         android:layout_toRightOf="@+id/TV2"
         android:inputType="textEmailAddress"
        
         />
        
    <TextView 
        android:id="@+id/TV3"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/TV2"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:textSize="15dp"       
        android:textStyle="normal"
        android:text="@string/password"
        android:textColor="#536878"
         />

    <EditText
        android:id="@+id/ET2"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_alignRight="@+id/ET1"
        android:layout_below="@+id/ET1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@+id/TV3"
        android:background="@android:drawable/editbox_background"
        android:inputType="textPassword"
        android:singleLine="true" 
             
       />

      <Button 
         android:id="@+id/Btn1" 
         android:layout_width="90dp"         
         android:layout_height="35dp"  
         android:layout_below="@+id/ET2"
         android:gravity="center_horizontal" 
         android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp" 
         android:text="@string/button"
        
          />
    
      <Button 
         android:id="@+id/Btn2" 
         android:layout_width="90dp"         
         android:layout_height="50dp"  
         android:layout_below="@+id/Btn1"
         android:gravity="center_horizontal" 
         android:layout_centerInParent="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp" 
         android:text="@string/button1"
          />
    
    


</RelativeLayout>
